pom.xml changed to 23