@@ -99,9 +99,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.11.0</version>
                     <configuration>
-                        <source>22</source>
-                        <target>22</target>
-                        <compilerArgs>--enable-preview</compilerArgs>
+                        <source>23</source>
+                        <target>23</target>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -120,8 +119,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>22</source>
-                    <target>22</target>
+                    <source>23</source>
+                    <target>23</target>
                     <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
